added icons to about me

--- a/portfolio.html
+++ b/portfolio.html
@@ -4,9 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
-    <!-- Optional Bootstrap theme -->
-    <!-- <link rel="stylesheet" href="css/bootstrap-theme.min.css"> -->
-
+    <script src="https://use.fontawesome.com/74b3874cdf.js"></script>
     <title>Melin</title>
   </head>
   <body>
@@ -40,8 +38,8 @@
 
 <!-- Hook -->
     <div class="row" id="help">
-      <div class="col-md-6">
-        <img src="melin.jpg" alt="Melin" class="img-rounded center-block">
+      <div class="col-md-4 col-md-offset-2">
+        <img src="melin.jpg" alt="Melin" id="melin" class="img-rounded center-block">
       </div>
       <div class="col-md-4 col-md-offset-1 text-vcenter">
         <h2 class="speech">How can I help?</h2>
@@ -54,17 +52,20 @@
       <div id="intro" class="container text-center">
         <div class="row">
           <div class="col-md-4">
+            <i class="fa fa-code fa-4x" aria-hidden="true"></i>
             <h3>Code</h3>
             <p>Fanny pack wayfarers chia wolf asymmetrical, skateboard pork belly actually.</p>
           </div>
 
           <div class="col-md-4">
+            <i class="fa fa-pencil-square-o fa-4x" aria-hidden="true"></i>
             <h3>Content</h3>
             <p>Drinking vinegar thundercats mixtape kombucha, blue bottle taxidermy offal.</p>
           </div>
 
           <div class="col-md-4">
-            <h3>Create</h3>
+            <i class="fa fa-tree fa-4x" aria-hidden="true"></i>
+            <h3>Cultivate</h3>
             <p>Tilde godard crucifix small batch, offal bespoke portland literally selvage chicharrones irony taxidermy.</p>
           </div>
         </div>
