--- a/portfolio.html
+++ b/portfolio.html
@@ -8,33 +8,41 @@
     <title>Melin</title>
   </head>
   <body>
-<!-- Navbar     -->
 
-    <nav class="navbar navbar-fixed-top navbar-default">
-      <div class="container-fluid">
-        <div class="navbar-header">
-          <a class="navbar-brand" href="#">
-            MELIN
-          </a>
+<!-- Begin First Background -->
+    <div class="sect">
+
+  <!-- Navbar     -->
+
+      <nav class="navbar navbar-fixed-top navbar-default">
+        <div class="container-fluid">
+          <div class="navbar-header">
+            <a class="navbar-brand" href="#">
+              MELIN
+            </a>
+          </div>
         </div>
-      </div>
-    </nav>
+      </nav>
 
-<!-- End Navbar -->
+  <!-- End Navbar -->
 
-<!-- Welcome -->
-    <div id="welcome" class="welcome">
-      <div class="container-fluid sect sectOne">
-        <div class="row">
-          <div class="col-md-8 col-md-offset-2 text-vcenter" id="welcomeText">
-            <h2>WELCOME</h2>
-            <h1>My name is Melin,</h1>
-            <h2>Nice to meet you.</h2>
+  <!-- Welcome -->
+      <div id="welcome" class="welcome">
+        <div class="container-fluid sect">
+          <div class="row">
+            <div class="col-md-8 col-md-offset-2 text-vcenter" id="welcomeText">
+              <h2>WELCOME</h2>
+              <h1>My name is Melin,</h1>
+              <h2>Nice to meet you.</h2>
+            </div>
           </div>
         </div>
       </div>
+  <!-- Welcome -->
+
     </div>
-<!-- Welcome -->
+    
+<!-- End First Background     -->
 
 <!-- Hook -->
     <div class="row" id="help">
@@ -48,9 +56,9 @@
 <!-- End Hook -->
 
 <!-- Intro -->
-    <div class="subSection">
-      <div id="intro" class="container text-center">
-        <div class="row">
+    <div class="sectTwo">
+      <div class="container text-center">
+        <div class="row" id="intro">
           <div class="col-md-4">
             <i class="fa fa-code fa-4x" aria-hidden="true"></i>
             <h3>Code</h3>
