added section divider to intro

--- a/portfolio.html
+++ b/portfolio.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
+    <link href="https://fonts.googleapis.com/css?family=Amatica+SC|Josefin+Sans|Josefin+Slab" rel="stylesheet">
     <script src="https://use.fontawesome.com/74b3874cdf.js"></script>
     <title>Melin</title>
   </head>
@@ -30,10 +31,10 @@
       <div id="welcome" class="welcome">
         <div class="container-fluid sect">
           <div class="row">
-            <div class="col-md-8 col-md-offset-2 text-vcenter" id="welcomeText">
-              <h2>WELCOME</h2>
-              <h1>My name is Melin,</h1>
-              <h2>Nice to meet you.</h2>
+            <div class="col-md-8 col-md-offset-1 text-vcenter" id="welcomeText">
+              <h2 class="bigText2">WELCOME</h2>
+              <h1 class="bigText1">My name is Melin,</h1>
+              <h2 class="bigText2">Nice to meet you.</h2>
             </div>
           </div>
         </div>
@@ -41,52 +42,60 @@
   <!-- Welcome -->
 
     </div>
-    
+
 <!-- End First Background     -->
+
 
 <!-- Hook -->
     <div class="row" id="help">
-      <div class="col-md-4 col-md-offset-2">
+      <div class="col-md-4">
         <img src="melin.jpg" alt="Melin" id="melin" class="img-rounded center-block">
       </div>
-      <div class="col-md-4 col-md-offset-1 text-vcenter">
+      <div class="col-md-4 text-vcenter">
         <h2 class="speech">How can I help?</h2>
+      </div>
+    </div>
+
+<div class="sectionDivider"></div>
+<div class="sectionDividerCenter"></div>
+<div class="sectionDivider"></div>
+
+    <div class="container-fluid text-center">
+      <div class="row" id="intro">
+        <div class="col-md-4 intro">
+          <i class="fa fa-code fa-4x" aria-hidden="true"></i>
+          <h3 class="sectionTitle">Code</h3>
+          <p class="description">Full-stack web development, including: Ruby, Ruby on Rails, HTML, CSS, &amp; Javascript.</p>
+        </div>
+
+        <div class="col-md-4 intro">
+          <i class="fa fa-pencil-square-o fa-4x" aria-hidden="true"></i>
+          <h3 class="sectionTitle">Content</h3>
+          <p class="description">Technical writing, copy writing, academic writing, creative writing &mdash; You name it, you got it!</p>
+        </div>
+
+        <div class="col-md-4 intro">
+          <i class="fa fa-tree fa-4x" aria-hidden="true"></i>
+          <h3 class="sectionTitle">Cultivate</h3>
+          <p class="description">Lifelong student specializing in personal development. I will never stop growing.</p>
+        </div>
       </div>
     </div>
 <!-- End Hook -->
 
 <!-- Intro -->
     <div class="sectTwo">
-      <div class="container text-center">
-        <div class="row" id="intro">
-          <div class="col-md-4">
-            <i class="fa fa-code fa-4x" aria-hidden="true"></i>
-            <h3>Code</h3>
-            <p>Fanny pack wayfarers chia wolf asymmetrical, skateboard pork belly actually.</p>
-          </div>
 
-          <div class="col-md-4">
-            <i class="fa fa-pencil-square-o fa-4x" aria-hidden="true"></i>
-            <h3>Content</h3>
-            <p>Drinking vinegar thundercats mixtape kombucha, blue bottle taxidermy offal.</p>
-          </div>
-
-          <div class="col-md-4">
-            <i class="fa fa-tree fa-4x" aria-hidden="true"></i>
-            <h3>Cultivate</h3>
-            <p>Tilde godard crucifix small batch, offal bespoke portland literally selvage chicharrones irony taxidermy.</p>
-          </div>
-        </div>
 
         <!-- About Me       -->
 
         <div class="row">
-          <div class="col-md-8 col-md-offset-2 well">
-            <h3>About Me</h3>
+          <div class="col-md-8 col-md-offset-2 well aboutMe">
+            <h3 class="sectionTitle">About Me</h3>
             <p>Narwhal everyday carry letterpress, cardigan mixtape polaroid swag locavore thundercats kale chips freegan cronut selfies ennui knausgaard. Chia keytar hammock migas photo booth. Bespoke paleo VHS waistcoat. Banh mi mlkshk quinoa, migas stumptown shoreditch brunch cold-pressed organic chambray yuccie beard lumbersexual. YOLO letterpress 8-bit, small batch narwhal keytar waistcoat XOXO sustainable wolf. PBR&B vice affogato plaid godard chillwave, tousled mustache fashion axe wolf polaroid mixtape try-hard blog pork belly. Beard fixie celiac roof party brooklyn skateboard, church-key artisan flannel.
             </p>
           </div>
-        </div>
+
         <!-- End About Me -->
 
       </div>
@@ -96,7 +105,7 @@
 <!-- Projects -->
         <div id="projects" class="container text-center">
           <div class="row">
-            <h2>Projects</h3>
+            <h2>Projects</h2>
           </div>
 
           <div class="row">
