styled about me, static images, and speech bubble

--- a/portfolio.html
+++ b/portfolio.html
@@ -92,7 +92,7 @@
         <div class="row">
           <div class="col-md-8 col-md-offset-2 well aboutMe">
             <h3 class="sectionTitle">About Me</h3>
-            <p>Narwhal everyday carry letterpress, cardigan mixtape polaroid swag locavore thundercats kale chips freegan cronut selfies ennui knausgaard. Chia keytar hammock migas photo booth. Bespoke paleo VHS waistcoat. Banh mi mlkshk quinoa, migas stumptown shoreditch brunch cold-pressed organic chambray yuccie beard lumbersexual. YOLO letterpress 8-bit, small batch narwhal keytar waistcoat XOXO sustainable wolf. PBR&B vice affogato plaid godard chillwave, tousled mustache fashion axe wolf polaroid mixtape try-hard blog pork belly. Beard fixie celiac roof party brooklyn skateboard, church-key artisan flannel.
+            <p class="description">Narwhal everyday carry letterpress, cardigan mixtape polaroid swag locavore thundercats kale chips freegan cronut selfies ennui knausgaard. Chia keytar hammock migas photo booth. Bespoke paleo VHS waistcoat. Banh mi mlkshk quinoa, migas stumptown shoreditch brunch cold-pressed organic chambray yuccie beard lumbersexual. YOLO letterpress 8-bit, small batch narwhal keytar waistcoat XOXO sustainable wolf. PBR&B vice affogato plaid godard chillwave, tousled mustache fashion axe wolf polaroid mixtape try-hard blog pork belly. Beard fixie celiac roof party brooklyn skateboard, church-key artisan flannel.
             </p>
           </div>
 
@@ -102,49 +102,49 @@
     </div>
   <!-- End Intro   -->
 
-<!-- Projects -->
-        <div id="projects" class="container text-center">
-          <div class="row">
-            <h2>Projects</h2>
+  <!-- Projects -->
+          <div id="projects" class="container text-center">
+            <div class="row">
+              <h2 class="sectionTitle project">Projects</h2>
+            </div>
+
+            <div class="row">
+              <div class="col-md-4">
+                <h3>Code</h3>
+                <p>Fanny pack wayfarers chia wolf asymmetrical, skateboard pork belly actually.</p>
+              </div>
+
+              <div class="col-md-4">
+                <h3>Content</h3>
+                <p>Drinking vinegar thundercats mixtape kombucha, blue bottle taxidermy offal.</p>
+              </div>
+
+              <div class="col-md-4">
+                <h3>Create</h3>
+                <p>Tilde godard crucifix small batch, offal bespoke portland literally selvage chicharrones irony taxidermy.</p>
+              </div>
+            </div>
+
+            <div class="row">
+              <div class="col-md-4">
+                <h3>Code</h3>
+                <p>Fanny pack wayfarers chia wolf asymmetrical, skateboard pork belly actually.</p>
+              </div>
+
+              <div class="col-md-4">
+                <h3>Content</h3>
+                <p>Drinking vinegar thundercats mixtape kombucha, blue bottle taxidermy offal.</p>
+              </div>
+
+              <div class="col-md-4">
+                <h3>Create</h3>
+                <p>Tilde godard crucifix small batch, offal bespoke portland literally selvage chicharrones irony taxidermy.</p>
+              </div>
+            </div>
+
           </div>
 
-          <div class="row">
-            <div class="col-md-4">
-              <h3>Code</h3>
-              <p>Fanny pack wayfarers chia wolf asymmetrical, skateboard pork belly actually.</p>
-            </div>
-
-            <div class="col-md-4">
-              <h3>Content</h3>
-              <p>Drinking vinegar thundercats mixtape kombucha, blue bottle taxidermy offal.</p>
-            </div>
-
-            <div class="col-md-4">
-              <h3>Create</h3>
-              <p>Tilde godard crucifix small batch, offal bespoke portland literally selvage chicharrones irony taxidermy.</p>
-            </div>
-          </div>
-
-          <div class="row">
-            <div class="col-md-4">
-              <h3>Code</h3>
-              <p>Fanny pack wayfarers chia wolf asymmetrical, skateboard pork belly actually.</p>
-            </div>
-
-            <div class="col-md-4">
-              <h3>Content</h3>
-              <p>Drinking vinegar thundercats mixtape kombucha, blue bottle taxidermy offal.</p>
-            </div>
-
-            <div class="col-md-4">
-              <h3>Create</h3>
-              <p>Tilde godard crucifix small batch, offal bespoke portland literally selvage chicharrones irony taxidermy.</p>
-            </div>
-          </div>
-
-        </div>
-
-<!-- End Projects -->
+  <!-- End Projects -->
 
     <script src="http://code.jquery.com/jquery-3.0.0.min.js" integrity="sha256-JmvOoLtYsmqlsWxa7mDSLMwa6dZ9rrIdtrrVYRnDRH0=" crossorigin="anonymous"></script>
     <script src="js/bootstrap.min.js"></script>
