--- a/portfolio.html
+++ b/portfolio.html
@@ -90,7 +90,7 @@
         <!-- About Me       -->
 
         <div class="row">
-          <div class="col-md-8 col-md-offset-2 well aboutMe">
+          <div class="col-md-8 col-md-offset-2 col-xs-10 col-xs-offset-1 well aboutMe">
             <h3 class="sectionTitle">About Me</h3>
             <p class="description">Narwhal everyday carry letterpress, cardigan mixtape polaroid swag locavore thundercats kale chips freegan cronut selfies ennui knausgaard. Chia keytar hammock migas photo booth. Bespoke paleo VHS waistcoat. Banh mi mlkshk quinoa, migas stumptown shoreditch brunch cold-pressed organic chambray yuccie beard lumbersexual. YOLO letterpress 8-bit, small batch narwhal keytar waistcoat XOXO sustainable wolf. PBR&B vice affogato plaid godard chillwave, tousled mustache fashion axe wolf polaroid mixtape try-hard blog pork belly. Beard fixie celiac roof party brooklyn skateboard, church-key artisan flannel.
             </p>
@@ -105,40 +105,77 @@
   <!-- Projects -->
           <div id="projects" class="container text-center">
             <div class="row">
-              <h2 class="sectionTitle project">Projects</h2>
+              <h2 class="sectionTitle project" id="projectHeader">Projects</h2>
             </div>
 
-            <div class="row">
-              <div class="col-md-4">
-                <h3>Code</h3>
-                <p>Fanny pack wayfarers chia wolf asymmetrical, skateboard pork belly actually.</p>
+        <!-- Carousel -->
+
+            <div id="carousel" class="carousel slide" data-ride="carousel">
+              <!-- Indicators -->
+              <ol class="carousel-indicators">
+                <li data-target="#carousel" data-slide-to="0" class="active"></li>
+                <li data-target="#carousel" data-slide-to="1"></li>
+                <li data-target="#carousel" data-slide-to="2"></li>
+              </ol>
+
+              <!-- Wrapper for slides -->
+              <div class="carousel-inner" role="listbox">
+                <div class="item active">
+                  <img src="Simplit-home.png" alt="Simplit Home" class="carouselImg">
+                  <div class="carousel-caption">
+                    <p></p>
+                  </div>
+                </div>
+                <div class="item">
+                  <img src="Simplit-projects.png" alt="Simplit Projects" class="carouselImg">
+                  <div class="carousel-caption">
+                    <p></p>
+                  </div>
+                </div>
+                <div class="item">
+                  <img src="Simplit-snippets.png" alt="Simplit Snippets" class="carouselImg">
+                  <div class="carousel-caption">
+                    <p></p>
+                  </div>
+                </div>
+                <h2>Simplit</h2>
               </div>
 
-              <div class="col-md-4">
-                <h3>Content</h3>
-                <p>Drinking vinegar thundercats mixtape kombucha, blue bottle taxidermy offal.</p>
-              </div>
-
-              <div class="col-md-4">
-                <h3>Create</h3>
-                <p>Tilde godard crucifix small batch, offal bespoke portland literally selvage chicharrones irony taxidermy.</p>
-              </div>
+              <!-- Controls -->
+              <a class="left carousel-control" href="#carousel" role="button" data-slide="prev">
+                <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+              </a>
+              <a class="right carousel-control" href="#carousel" role="button" data-slide="next">
+                <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+              </a>
             </div>
 
+        <!-- End of Carousel -->
+
+        <!-- Other Projects -->
             <div class="row">
-              <div class="col-md-4">
-                <h3>Code</h3>
-                <p>Fanny pack wayfarers chia wolf asymmetrical, skateboard pork belly actually.</p>
+              <div class="col-sm-6 col-md-5 col-md-offset-1">
+                <div class="thumbnail">
+                  <img src="my-party-home.png" alt="My Party">
+                  <div class="caption">
+                    <h3>My Party</h3>
+                    <p>A restaurant reservation app created as a "midterm" project for Wyncode Academy.</p>
+                    <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
+                  </div>
+                </div>
               </div>
 
-              <div class="col-md-4">
-                <h3>Content</h3>
-                <p>Drinking vinegar thundercats mixtape kombucha, blue bottle taxidermy offal.</p>
-              </div>
-
-              <div class="col-md-4">
-                <h3>Create</h3>
-                <p>Tilde godard crucifix small batch, offal bespoke portland literally selvage chicharrones irony taxidermy.</p>
+              <div class="col-sm-6 col-md-5">
+                <div class="thumbnail">
+                  <img src="bar-one.png" alt="Bar One">
+                  <div class="caption">
+                    <h3>Bar One</h3>
+                    <p>A satirical REPL game about trying to find true love &mdash; or not &mdash; in a  bar.</p>
+                    <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
+                  </div>
+                </div>
               </div>
             </div>
 
@@ -146,7 +183,7 @@
 
   <!-- End Projects -->
 
-    <script src="http://code.jquery.com/jquery-3.0.0.min.js" integrity="sha256-JmvOoLtYsmqlsWxa7mDSLMwa6dZ9rrIdtrrVYRnDRH0=" crossorigin="anonymous"></script>
+    <script src="http://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
     <script src="js/bootstrap.min.js"></script>
   </body>
 </html>
