styled projects and started footer

--- a/portfolio.html
+++ b/portfolio.html
@@ -49,7 +49,7 @@
 <!-- Hook -->
     <div class="row" id="help">
       <div class="col-md-4">
-        <img src="melin.jpg" alt="Melin" id="melin" class="img-rounded center-block">
+        <img src="images/melin.jpg" alt="Melin" id="melin" class="img-rounded center-block">
       </div>
       <div class="col-md-4 text-vcenter">
         <h2 class="speech">How can I help?</h2>
@@ -109,7 +109,7 @@
             </div>
 
         <!-- Carousel -->
-
+          <div class="col-md-12">
             <div id="carousel" class="carousel slide" data-ride="carousel">
               <!-- Indicators -->
               <ol class="carousel-indicators">
@@ -121,25 +121,26 @@
               <!-- Wrapper for slides -->
               <div class="carousel-inner" role="listbox">
                 <div class="item active">
-                  <img src="Simplit-home.png" alt="Simplit Home" class="carouselImg">
+                  <img src="images/Simplit-home.png" alt="Simplit Home" class="carouselImg">
                   <div class="carousel-caption">
                     <p></p>
                   </div>
                 </div>
                 <div class="item">
-                  <img src="Simplit-projects.png" alt="Simplit Projects" class="carouselImg">
+                  <img src="images/Simplit-projects.png" alt="Simplit Projects" class="carouselImg">
                   <div class="carousel-caption">
                     <p></p>
                   </div>
                 </div>
                 <div class="item">
-                  <img src="Simplit-snippets.png" alt="Simplit Snippets" class="carouselImg">
+                  <img src="images/Simplit-snippets.png" alt="Simplit Snippets" class="carouselImg">
                   <div class="carousel-caption">
                     <p></p>
                   </div>
                 </div>
-                <h2>Simplit</h2>
+
               </div>
+
 
               <!-- Controls -->
               <a class="left carousel-control" href="#carousel" role="button" data-slide="prev">
@@ -151,37 +152,56 @@
                 <span class="sr-only">Next</span>
               </a>
             </div>
+          </div>
+        </div>
 
+          <div class="col-md-8 col-md-offset-2">
+            <h2 class="sectionTitle text-left">Simplit <i class="fa fa-long-arrow-right" aria-hidden="true"></i></h2>
+            <p class="description text-right">Simplit is a summarization tool designed to make research easier. Doing research can be very time consuming, and often requires reading through many more potential resources than will actually be used as a reference. Simplit is here to save you time while going through this process. See it on <a href="https://github.com/jasminecap/Simplit" target="_blank">Github</a>.</p>
+          </div>
         <!-- End of Carousel -->
 
         <!-- Other Projects -->
+
+        <div class="col-md-12 text-center">
+          <h3 class="smallSectionTitle">Other Projects:</h3>
+        </div>
+
             <div class="row">
-              <div class="col-sm-6 col-md-5 col-md-offset-1">
+              <div class="col-sm-6 col-md-4 col-md-offset-2 text-center">
                 <div class="thumbnail">
-                  <img src="my-party-home.png" alt="My Party">
+                  <img src="images/my-party-home.png" alt="My Party">
                   <div class="caption">
                     <h3>My Party</h3>
                     <p>A restaurant reservation app created as a "midterm" project for Wyncode Academy.</p>
-                    <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
+                    <p><a href="https://github.com/melonious/my-party" target="_blank" class="btn btn-primary" role="button">See the Code <i class="fa fa-github fa-2x" aria-hidden="true"></i></a></p>
                   </div>
                 </div>
               </div>
 
-              <div class="col-sm-6 col-md-5">
+              <div class="col-sm-6 col-md-4 text-center">
                 <div class="thumbnail">
-                  <img src="bar-one.png" alt="Bar One">
+                  <img src="images/bar-one.png" alt="Bar One">
                   <div class="caption">
                     <h3>Bar One</h3>
-                    <p>A satirical REPL game about trying to find true love &mdash; or not &mdash; in a  bar.</p>
-                    <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
+                    <p>A satirical REPL game about trying to find true love &mdash; or something else &mdash; in a  bar.</p>
+                    <p><a href="https://github.com/melonious/REPL_Game" target="_blank" class="btn btn-primary" role="button">See the Code <i class="fa fa-github fa-2x" aria-hidden="true"></i></a></p>
                   </div>
                 </div>
               </div>
             </div>
 
-          </div>
-
   <!-- End Projects -->
+
+<!-- Footer -->
+
+<footer class="footer">
+  <div class="container">
+    <p>blah</p>
+  </div>
+</footer>
+<!-- End Footer -->
+
 
     <script src="http://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
     <script src="js/bootstrap.min.js"></script>
