added social media icons

--- a/portfolio.html
+++ b/portfolio.html
@@ -197,7 +197,25 @@
 
 <footer class="footer">
   <div class="container">
-    <p>blah</p>
+    <div class="row">
+      <div class="footIcon">
+        <div class="col-md-2 col-md-offset-1 col-xs-2 text-center">
+          <a href=""><i class="fa fa-github fa-4x" aria-hidden="true"></i></a>
+        </div>
+        <div class="col-md-2 col-xs-2 text-center">
+          <a href=""><i class="fa fa-twitter fa-4x" aria-hidden="true"></i></a>
+        </div>
+        <div class="col-md-2 col-xs-2 text-center">
+          <a href=""><i class="fa fa-pinterest fa-4x" aria-hidden="true"></i></a>
+        </div>
+        <div class="col-md-2 col-xs-2 text-center">
+          <a href=""><i class="fa fa-instagram fa-4x" aria-hidden="true"></i></a>
+        </div>
+        <div class="col-md-2 col-xs-2 text-center">
+          <a href=""><i class="fa fa-linkedin fa-4x" aria-hidden="true"></i></a>
+        </div>
+      </div>
+    </div>
   </div>
 </footer>
 <!-- End Footer -->
