added href links to footer

--- a/portfolio.html
+++ b/portfolio.html
@@ -174,7 +174,7 @@
                   <div class="caption">
                     <h3>My Party</h3>
                     <p>A restaurant reservation app created as a "midterm" project for Wyncode Academy.</p>
-                    <p><a href="https://github.com/melonious/my-party" target="_blank" class="btn btn-primary" role="button">See the Code <i class="fa fa-github fa-2x" aria-hidden="true"></i></a></p>
+                    <p><a href="https://github.com/melonious/my-party" target="_blank" class="btn btn-primary" role="button">See the Code <i class="fa fa-github fa-2x faHover" aria-hidden="true"></i></a></p>
                   </div>
                 </div>
               </div>
@@ -185,7 +185,7 @@
                   <div class="caption">
                     <h3>Bar One</h3>
                     <p>A satirical REPL game about trying to find true love &mdash; or something else &mdash; in a  bar.</p>
-                    <p><a href="https://github.com/melonious/REPL_Game" target="_blank" class="btn btn-primary" role="button">See the Code <i class="fa fa-github fa-2x" aria-hidden="true"></i></a></p>
+                    <p><a href="https://github.com/melonious/REPL_Game" target="_blank" class="btn btn-primary" role="button">See the Code <i class="fa fa-github fa-2x faHover" aria-hidden="true"></i></a></p>
                   </div>
                 </div>
               </div>
@@ -200,19 +200,19 @@
     <div class="row">
       <div class="footIcon">
         <div class="col-md-2 col-md-offset-1 col-xs-2 text-center">
-          <a href=""><i class="fa fa-github fa-4x" aria-hidden="true"></i></a>
+          <a href="https://github.com/melonious" target="_blank"><i class="fa fa-github fa-4x" aria-hidden="true"></i></a>
         </div>
         <div class="col-md-2 col-xs-2 text-center">
-          <a href=""><i class="fa fa-twitter fa-4x" aria-hidden="true"></i></a>
+          <a href="https://twitter.com/MeloniousRex" target="_blank"><i class="fa fa-twitter fa-4x" aria-hidden="true"></i></a>
         </div>
         <div class="col-md-2 col-xs-2 text-center">
-          <a href=""><i class="fa fa-pinterest fa-4x" aria-hidden="true"></i></a>
+          <a href="https://www.pinterest.com/MeloniousRex/" target="_blank"><i class="fa fa-pinterest fa-4x" aria-hidden="true"></i></a>
         </div>
         <div class="col-md-2 col-xs-2 text-center">
-          <a href=""><i class="fa fa-instagram fa-4x" aria-hidden="true"></i></a>
+          <a href="https://www.instagram.com/melonious_/" target="_blank"><i class="fa fa-instagram fa-4x" aria-hidden="true"></i></a>
         </div>
         <div class="col-md-2 col-xs-2 text-center">
-          <a href=""><i class="fa fa-linkedin fa-4x" aria-hidden="true"></i></a>
+          <a href="https://www.linkedin.com/in/deannamelin" target="_blank"><i class="fa fa-linkedin fa-4x" aria-hidden="true"></i></a>
         </div>
       </div>
     </div>
