--- a/portfolio.html
+++ b/portfolio.html
@@ -92,8 +92,9 @@
         <div class="row">
           <div class="col-md-8 col-md-offset-2 col-xs-10 col-xs-offset-1 well aboutMe">
             <h3 class="sectionTitle">About Me</h3>
-            <p class="description">Narwhal everyday carry letterpress, cardigan mixtape polaroid swag locavore thundercats kale chips freegan cronut selfies ennui knausgaard. Chia keytar hammock migas photo booth. Bespoke paleo VHS waistcoat. Banh mi mlkshk quinoa, migas stumptown shoreditch brunch cold-pressed organic chambray yuccie beard lumbersexual. YOLO letterpress 8-bit, small batch narwhal keytar waistcoat XOXO sustainable wolf. PBR&B vice affogato plaid godard chillwave, tousled mustache fashion axe wolf polaroid mixtape try-hard blog pork belly. Beard fixie celiac roof party brooklyn skateboard, church-key artisan flannel.
-            </p>
+            <p class="description">I find inspiration in my surroundings. I believe that I can learn anything I set my mind to, and this diversity of knowledge helps me to approach problem sets and tasks in novel and creative ways.</p>
+
+            <p class="description">As a recent graduate from Wyncode Academy, I am currently looking for a job where I can apply my web development skills. I love to be challenged in the workplace, and continuing my education is very important to me.</p>
           </div>
 
         <!-- End About Me -->
