--- a/public/portfolio.html
+++ b/public/portfolio.html
@@ -200,7 +200,7 @@
   <div class="container">
     <div class="row">
       <div class="footIcon">
-        <div class="col-md-2 col-md-offset-1 col-xs-2 text-center">
+        <div class="col-md-2 col-md-offset-1 col-xs-2 col-xs-offset-1 text-center">
           <a href="https://github.com/melonious" target="_blank"><i class="fa fa-github fa-4x" aria-hidden="true"></i></a>
         </div>
         <div class="col-md-2 col-xs-2 text-center">
