speech bubble is now mobile responsive

--- a/public/portfolio.html
+++ b/public/portfolio.html
@@ -51,7 +51,7 @@
       <div class="col-md-4">
         <img src="images/melin.jpg" alt="Melin" id="melin" class="img-rounded center-block">
       </div>
-      <div class="col-md-4 text-vcenter">
+      <div class="col-md-4 col-xs-10 col-xs-offset-1 text-vcenter">
         <h2 class="speech">How can I help?</h2>
       </div>
     </div>
