--- a/public/portfolio.html
+++ b/public/portfolio.html
@@ -19,7 +19,7 @@
         <div class="container-fluid">
           <div class="navbar-header">
             <a class="navbar-brand" href="#">
-              MELIN
+              MELIN <small>FULL-STACK DEVELOPER</small>
             </a>
           </div>
         </div>
