--- a/public/portfolio.html
+++ b/public/portfolio.html
@@ -19,8 +19,10 @@
         <div class="container-fluid">
           <div class="navbar-header">
             <a class="navbar-brand" href="#">
-              MELIN <small>FULL-STACK DEVELOPER</small>
+              MELIN
             </a>
+          </div>
+          <div class="navbar-text"><small>FULL-STACK DEVELOPER</small>
           </div>
         </div>
       </nav>
